<resources>
    <string name="app_name">Motion Sport</string>
    <string name="register">Register</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="smart_sport">Smart Sport</string>
    <string name="intro_des_1">A way of living</string>
    <string name="item_label">Items</string>
    <string name="smart_sport2">Smart Sport</string>
    <string name="intro_des_2">A way of living</string>

    <string name="smart_sport3">Smart Sport</string>
    <string name="intro_des_3">A way of living</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="motion_sport">Motion Sport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>